--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-    <img src="cat-website/logo1.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="https://discord.gg/nJrA6drUek" target="_blank">Join Us in Discord</a></li>
-        </ul>
-    </nav>
-</header>
+        <img src="cat-website/logo1.webp" alt="Cute Cat Gallery Logo" style="width:150px;">
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#gallery">Gallery</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://discord.gg/nJrA6drUek" target="_blank">Join Us in Discord</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <section id="home" class="horizontal-section">
         <div class="home-content">
@@ -120,13 +120,13 @@
                 <span class="star" data-value="4">★</span>
                 <span class="star" data-value="5">★</span>
             </div>
-            <p id="average-rating">You're Rating helps us !</p>
+            <p id="average-rating">Your rating helps us!</p>
             <p id="thank-you-message" style="display: none;">Thank you for your rating! If you have a suggestion, feel free to contact the developer.</p>
         </div>
     </section>
 
     <footer>
-        <p>&copy;        made with <span style="color: #e25555;">&#9829;</span> </p>
+        <p>&copy; made with <span style="color: #e25555;">&#9829;</span></p>
         <p>&copy; 2024 Cute Cat Gallery. Developed by FSXstealth. Idea by dani_blob.</p>
     </footer>
 
