--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <h2>Cute Cat Gallery</h2>
             <div class="gallery-container">
                 <div class="cat-image" onclick="showModal('FSXStealth Cat', 'Known for its playful nature!')">
-                    <img src="cat1.avif" alt="FSXStealth Cat">
+                    <img src="cat100.webp" alt="FSXStealth Cat">
                 </div>
                 <div class="cat-image" onclick="showModal('Dani Car', 'A fluffy ball of joy! Ready to discover')">
-                    <img src="cat2.avif" alt="Dani Car">
+                    <img src="cat1.avif" alt="Dani Car">
                 </div>
                 <div class="cat-image" onclick="showModal('OOO1 Cat', 'The lazy cat')">
                     <img src="cat3.avif" alt="OOO1 Cat">
